--- a/public/index.html
+++ b/public/index.html
@@ -169,28 +169,29 @@
             <a href="mailto:gentrificationtax@gmail.com">gentrificationtax@gmail.com</a>
 <br /><Br />
   
-            <form>
-              <h5></h5>
-              <p><strong>Subscribe to our newsletter</strong><br/>for more information.</p>
-              <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                <label for="email" class="visually-hidden">Email address</label>
-                <input id="email" type="text" placeholder="Email address">
-                <button id="subscribe_submit" type="button">Subscribe</button>
-              </div>
-            </form>
-          </div>
-        </div>
+<form method="POST" id="subscribe_form" action="/subscribe" name="subscribe_form" enctype="multipart/form-data">        
+    <div id="form2">
+      
+      <p><strong>Subscribe to our newsletter</strong><br/>for more information.</p>
+      <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+        <label for="footer_email" class="visually-hidden">Email address</label>
+        <input id="footer_email" name="footer_email" type="text" placeholder="Email address">
+        <button id="subscribe_submit" type="subscribe_button">Subscribe</button>
+      </div>
     </div>
-  </div>
-  </footer>
-  
+    </form>
 
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/jquery.scrollTo.min.js" integrity="sha512-PsJ1f4lw0Jrga4wbDOvdWs9DFl88C1vlcH2VQYqgljHBmzmqtGivUkzRHWx2ZxFlnysKUcROqLeuOpYh9q4YNg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="/js/d3.v7.min.js"></script>
-        <script src="js/script.js" async defer></script>
-        <!-- <script src="d3.js"></script> -->
+  </div>
+</div>
+</div>
+</div>
+</footer>
+      <!--[if lt IE 7]>
+          <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+      <![endif]-->
+      <script src="/js/jquery.min.js"></script>
+      <script src="/js/jquery.scrollTo.min.js" integrity="sha512-PsJ1f4lw0Jrga4wbDOvdWs9DFl88C1vlcH2VQYqgljHBmzmqtGivUkzRHWx2ZxFlnysKUcROqLeuOpYh9q4YNg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="/js/d3.v7.min.js"></script>
+      <script src="js/script.js" async defer></script>
+  </body>
 </html>
