added basic form validation.

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -122,7 +122,9 @@
                     <p> Tax funds would go directly to local Community Land Trusts (CLT) and housing cooperatives (rather than to the centralized City), ensuring that the profit from gentrification remains in the neighborhood to create and maintain deeply affordable locally managed housing. 
                     </p>
 
-                    <div id="bar_svg"></div>
+                    <!-- <div id="bar_svg"></div> -->
+
+                    <div class="pics" data-bs-toggle="modal" data-bs-target="#imageModal" data-href="img/graph.png" class="modal"><img src="img/graph.png" />
                   </div>
                 </div>
               </div>
@@ -168,9 +170,6 @@
                   <div class="accordion-body">
                     <p>
                     The campaign for a Gentrification Tax was initiated in 2019 by <a href="https://www.gentrification.tax/" target="_blank">Gentrification Tax Action</a> (a group of local artists and residents) and continues to grow through collaborations with the <a href="http://www.pnlt.ca/" target="_blank">Parkdale Neighbourhood Land Trust</a> (PNLT) and <a href="https://lga-ap.com/" target="_blank">Levitt Goodman Architects</a>.               
-                    </p>
-                    <p>
-                      <p><strong>ORG LOGOS</strong></p>
                     </p>
                   </div>
                 </div>
