--- a/public/join.html
+++ b/public/join.html
@@ -93,7 +93,7 @@
         </div>
         <div class="col-sm-6">  
           <br />
-          <button id="letter_submit">Submit</button>
+          <button id="letter_submit" disabled>Submit</button>
         </div>
       
   
