--- a/public/pay.html
+++ b/public/pay.html
@@ -49,7 +49,7 @@
 
     <p>
 
-    Explore the Gentrification Tax Calculator to decide how much voluntary tax you will pay. Not selling a house? That’s ok, you can still pay!
+    <a href="/#calculator">Explore the Gentrification Tax Calculator</a> to decide how much voluntary tax you will pay. Not selling a house? That’s ok, you can still pay!
     </p>
 
 <p>
@@ -58,7 +58,7 @@
 
 <p>
   
-<a class="button" href="http://pnlt.ca/donate" target="_blank">donate to PNLT</a>
+<a class="button" href="http://pnlt.ca/donate" target="_blank">Donate to Parkdale Neighborhood Land Trust</a>
 </p>
 
 
