GTA site + calculation algorithm.

--- a/public/index.html
+++ b/public/index.html
@@ -160,8 +160,8 @@
 
     <tr>
         <td class="label">
-            Suggested rate</td>
-        <td colspan="2"><div id="suggested-rate" >7%</div>
+            Proposed rate</td>
+        <td colspan="2"><div id="suggested-rate" >7.6%</div>
             </td>
     </tr>
 
